added primary id in all order types, added order status in order-details, added new components: reviews, kyc and kyc-details,

--- a/src/app/components/sales/all-orders/all-orders.component.html
+++ b/src/app/components/sales/all-orders/all-orders.component.html
@@ -44,6 +44,7 @@
                           <thead>
                             <tr>
                               <th>Order Id</th>
+                              <th>Primary Id</th>
                               <th>Order type</th>
                               <th>Order date</th>
                               <th>Customer</th>
@@ -54,6 +55,7 @@
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
+                              <td>{{o.order_id}}</td>
                               <td>{{o.primary_id}}</td>
                               <td>{{o.order_type}}</td>
                               <td>{{o.createdAt | date:'dd-MMM-yyyy HH:mm' : '+5:30'}}</td> 
