--- a/src/app/components/sales/primary-order/primary-order.component.html
+++ b/src/app/components/sales/primary-order/primary-order.component.html
@@ -21,6 +21,7 @@
                           <thead>
                             <tr>
                               <th>Order Id</th>
+                              <th>Primary Id</th>
                               <!-- <th>Payu Trans Id</th> -->
                               <th>Order date</th>
                               <th>Customer name</th>
@@ -32,6 +33,7 @@
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
+                              <td>{{o.order_id}}</td>
                               <td>{{o.primary_id}}</td>
                               <!-- <td>{{o.payuid}}</td> -->
                               <td>{{o.createdAt}}</td> 
