--- a/src/app/components/sales/return-order/return-order.component.html
+++ b/src/app/components/sales/return-order/return-order.component.html
@@ -20,6 +20,7 @@
                           <thead>
                             <tr>
                               <th>Order Id</th>
+                              <th>Primary Id</th>
                               <!-- <th>Payu Trans Id</th> -->
                               <th>Order date</th>
                               <th>Name</th>
@@ -31,6 +32,7 @@
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
                               <td>{{o.order_id}}</td>
+                              <td>{{o.primary_id}}</td>
                               <!-- <td>{{o.payuid}}</td> -->
                               <td>{{o.createdAt | date: 'dd MM yyyy hh:mm'}}</td> 
                               <td>{{o.firstName}}</td> 
