--- a/src/app/components/users/customers/customers.component.scss
+++ b/src/app/components/users/customers/customers.component.scss
@@ -7,3 +7,11 @@
     max-width: 90%;
     width: 90%;
 }
+
+.bg-danger{
+    background-color: #ff4444 !important;
+}
+
+.bg-dark{
+    background-color: #292b2c ;
+}
