--- a/src/app/components/users/kyc/kyc.component.html
+++ b/src/app/components/users/kyc/kyc.component.html
@@ -1,18 +1,20 @@
 <!-- Container-fluid starts-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-body">
                     <div class="custom-datatable">
 
-                        
+                        <button class="btn btn-warning mb-2" (click)="open(chooseCustomer)">Create eKYC</button>
                         <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
                               <th>Customer #</th>
                               <th>Customer type</th>
-                              <th>Comments</th>
+                              <th>Name</th>
+                              <th>Phone no.</th>
+                              <th>Email</th>
                               <th>KYC status</th>
                               <th>Created at</th>
                               <th>Last modified</th>
@@ -22,7 +24,9 @@
                             <tr [routerLink]="[o.id]">
                               <td>{{o.customer_id}}</td>
                               <td>{{o.customer_type}}</td>
-                              <td>{{o.comments}}</td>
+                              <td>{{o.firstName}}</td>
+                              <td>{{o.mobile}}</td>
+                              <td>{{o.email}}</td>
                               <td>{{o.kyc_status}}</td> 
                               <td>{{o.created_at | date:'dd-MMM-yyyy HH:mm'}}</td>  
                               <td>{{o.modified_at | date:'dd-MMM-yyyy HH:mm'}}</td>                 
@@ -33,4 +37,35 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
+
+
+    <ng-template #chooseCustomer let-c="close" let-d="dismiss">
+      <div class="modal-header text-center">
+        <h4 class="col-12 modal-title text-center" id="modal-basic-title">Choose customer</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d(); ">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="row">  
+            <div class="col-sm-6">
+              <div class="card">
+                  <div class="card-body">
+                      <div class="row">
+                          <div class="col-sm-12">
+                              <ng-multiselect-dropdown
+                                  [placeholder]="'Select customer'"
+                                  [settings]="dropdownSettings"
+                                  [data]="customers"
+                                  (onSelect)="onItemSelect($event)"
+                                  >
+                              </ng-multiselect-dropdown>                            
+                          </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </ng-template>
