--- a/src/app/components/sales/all-orders/all-orders.component.html
+++ b/src/app/components/sales/all-orders/all-orders.component.html
@@ -43,26 +43,27 @@
                         <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
-                              <th>Order Id</th>
-                              <th>Primary Id</th>
+                              
                               <th>Order type</th>
+                              <th>Order Id</th>
                               <th>Order date</th>
+                              <th>Mobile</th>
                               <th>Customer</th>
-                              <th>Invoice value</th>
-                              <th>Payment status</th>
-                              <th>Delivery status</th>
+                              <th>Transaction value</th>
+                              <th>Transaction status</th>
+                              <th>Transaction source</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
-                              <td>{{o.order_id}}</td>
-                              <td>{{o.primary_id}}</td>
                               <td>{{o.order_type}}</td>
+                              <td>{{o.order_id}}</td>
                               <td>{{o.createdAt | date:'dd-MMM-yyyy HH:mm' : '+5:30'}}</td> 
+                              <td>{{o.mobile}}</td>
                               <td>{{o.firstName}}</td> 
                               <td>₹ {{o.grandTotal}}</td>  
                               <td>{{o.paymentStatus}}</td> 
-                              <td>{{o.delivery_status}}</td>                       
+                              <td>{{o.transaction_source}}</td>                       
                             </tr>                          
                           </tbody>
                         </table>
