--- a/src/app/components/sales/primary-order/primary-order.component.html
+++ b/src/app/components/sales/primary-order/primary-order.component.html
@@ -21,23 +21,21 @@
                           <thead>
                             <tr>
                               <th>Order Id</th>
-                              <th>Primary Id</th>
-                              <!-- <th>Payu Trans Id</th> -->
                               <th>Order date</th>
                               <th>Customer name</th>
+                              <th>Mobile</th>
                               <th>Security deposit</th>
-                              <th>Invoice value</th>
-                              <th>Payment status</th>
+                              <th>Transaction value</th>
+                              <th>Transaction status</th>
                               <th>Delivery status</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
                               <td>{{o.order_id}}</td>
-                              <td>{{o.primary_id}}</td>
-                              <!-- <td>{{o.payuid}}</td> -->
-                              <td>{{o.createdAt}}</td> 
+                              <td>{{o.createdAt | date:'dd MM yyyy'}}</td> 
                               <td>{{o.firstName}}</td> 
+                              <td>{{o.mobile}}</td>
                               <td>₹{{o.totalSecurityDeposit}}</td>  
                               <td>₹ {{o.grandTotal}}</td>  
                               <td>{{o.paymentStatus}}</td> 
