--- a/src/app/components/sales/replacement-order/replacement-order.component.html
+++ b/src/app/components/sales/replacement-order/replacement-order.component.html
@@ -20,10 +20,9 @@
                           <thead>
                             <tr>
                               <th>Order Id</th>
-                              <th>Primary Id</th>
-                              <!-- <th>Payu Trans Id</th> -->
                               <th>Order date</th>
                               <th>Customer name</th>
+                              <th>Mobile</th>
                               <th>Amount</th>
                               <th>Payment status</th>
                               <th>Delivery status</th>
@@ -32,9 +31,8 @@
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
                               <td>{{o.order_id}}</td>
-                              <td>{{o.primary_id}}</td>
-                              <!-- <td>{{o.payuid}}</td> -->
                               <td>{{o.createdAt | date: 'dd MM yyyy hh:mm'}}</td> 
+                              <td>{{o.mobile}}</td>
                               <td>{{o.firstName}}</td> 
                               <td>₹{{o.grandTotal}}</td>    
                               <td>{{o.paymentStatus}}</td> 
