fixed return request issues,

--- a/src/app/components/sales/create-request/create-request.component.html
+++ b/src/app/components/sales/create-request/create-request.component.html
@@ -177,6 +177,6 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-warning" (click)="placeReturnRequest();d();">Replace</button>
+        <button class="btn btn-warning" (click)="placeReturnRequest();d();">Return</button>
     </div>
 </ng-template>
