--- a/src/app/components/users/customers/customers.component.html
+++ b/src/app/components/users/customers/customers.component.html
@@ -170,7 +170,7 @@
                           <th>Order Id</th>
                           <th>Order type</th>
                           <th>Order date</th>
-                          <th>Invoice value</th>
+                          <th>Transaction value</th>
                           <th>Payment status</th>
                           <th>Delivery status</th>
                           <th>Order status</th>
