--- a/src/app/components/sales/primary-order/primary-order.component.html
+++ b/src/app/components/sales/primary-order/primary-order.component.html
@@ -8,6 +8,7 @@
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
                             <button class="pull-left btn btn-warning" [routerLink]="'../create-order'">Create order <i class="fa fa-plus"></i></button>
+                            <button class="pull-left btn btn-warning ml-2" (click)="runPrimaryOrderJob()"> <i class="fa fa-refresh"></i> Refresh</button>
                             <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
                         <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">
